<resources>
    <string name="app_name">Quizes</string>
    <string name="quizapp">QuizApp</string>
    <string name="welcome">Welcome</string>
    <string name="please_enter_your_name">Please Enter your name</string>
    <string name="start">Start</string>
    <string name="name">Name</string>
    <string name="result">Result</string>
    <string name="hey_congratulation">Hey Congratulation</string>
    <string name="finish">Finish</string>
</resources>