<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/back_quiz"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quizapp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginBottom="30dp"
        android:textSize="25sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardMaxElevation="4dp"
        app:cardCornerRadius="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/welcome"
                android:gravity="center"
                android:layout_margin="10dp"
                android:textSize="25sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/please_enter_your_name"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/name_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:textColor="@color/black"
                    />


            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/Start_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:background="@color/black"
                android:textStyle="bold"
                />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>