<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20sp"
    android:background="@drawable/back_quiz"
    tools:context=".ResultActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="30sp"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:src="@drawable/ic_trophy"
        android:layout_marginBottom="10sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/hey_congratulation"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="30sp"

        />
    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "username"
        android:textColor="@color/black"
        android:textStyle=""
        android:layout_marginTop="5sp"
        android:textSize="25sp"

        />
    <TextView
        android:id="@+id/result_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "Yours scoreis"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:layout_marginTop="10sp"
        android:textSize="20sp"

        />
    <Button
        android:id="@+id/finish_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        android:layout_marginTop="20sp"
        android:textSize="20sp"
        />
</LinearLayout>